[package]
name = "balcony"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/wrightrocket/balcony/"
license = "MIT"
# license-file = "LICENSE"
keywords = ["organization", "package", "crate", "module"]
categories = ["development-tools"]
publish = false

# authors = "Keith Wright"
description = "An example of organizing rust code based on what is on my balcony."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# flowers = { path = "src/flowers.rs" }

